# trading-engine-cpp

./: CMakeLists.txt  README.md  main.cpp
include/: order.h  orderBook.h  stock.h  trader.h
src/: order.cpp  orderBook.cpp  stock.cpp  trader.cpp
